// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > Tag checkableVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    可选中的标签
  </div>
  <div
    class="tag-demo"
  >
    <div>
      
      <div
        class="tag-block check-tag-block"
      >
        <div
          class="check-tag-block__title"
        >
          light
        </div>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--light"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            未选中态
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--light t-tag--checked"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            已选中态
          </span>
          <!---->
        </span>
      </div>
      <div
        class="tag-block check-tag-block"
      >
        <div
          class="check-tag-block__title"
        >
          dark
        </div>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--dark"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            未选中态
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--dark t-tag--checked"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            已选中态
          </span>
          <!---->
        </span>
      </div>
      <div
        class="tag-block check-tag-block"
      >
        <div
          class="check-tag-block__title"
        >
          outline
        </div>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--outline"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            未选中态
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--outline t-tag--checked"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            已选中态
          </span>
          <!---->
        </span>
      </div>
      <div
        class="tag-block check-tag-block"
      >
        <div
          class="check-tag-block__title"
        >
          light-outline
        </div>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--light-outline"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            未选中态
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--light-outline t-tag--checked"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            已选中态
          </span>
          <!---->
        </span>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tag > Tag closableVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    可关闭标签
  </div>
  <div
    class="tag-demo"
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium t-tag--closable"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        文字标签
        
      </span>
      <span
        class="t-tag__icon-close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium t-tag--closable"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        文字标签
        
      </span>
      <span
        class="t-tag__icon-close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Tag > Tag mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Tag 标签
  </h1>
  <p
    class="summary"
  >
    用于表明主体的类目，属性或状态。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          基础标签
        </div>
        <div
          class="tag-demo"
        >
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              标签文字 
              
            </span>
            <!---->
          </span>
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              标签文字
              
            </span>
            <!---->
          </span>
        </div>
        <div
          class="summary"
        >
          圆弧标签
        </div>
        <div
          class="tag-demo"
        >
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--round t-tag--light t-tag--medium"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              标签文字
              
            </span>
            <!---->
          </span>
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--round t-tag--outline t-tag--medium"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              标签文字
              
            </span>
            <!---->
          </span>
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--mark t-tag--outline t-tag--medium"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              标签文字
              
            </span>
            <!---->
          </span>
        </div>
        <div
          class="summary"
        >
          带图标的标签
        </div>
        <div
          class="tag-demo"
        >
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
            role="button"
          >
            <span
              class="t-tag__icon"
            >
              
              <svg
                class="t-icon t-icon-discount"
              >
                <use
                  href="#t-icon-discount"
                />
              </svg>
              
            </span>
            <span
              class="t-tag__text"
            >
              
               标签文字 
              
            </span>
            <!---->
          </span>
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium"
            role="button"
          >
            <span
              class="t-tag__icon"
            >
              
              <svg
                class="t-icon t-icon-discount"
              >
                <use
                  href="#t-icon-discount"
                />
              </svg>
              
            </span>
            <span
              class="t-tag__text"
            >
              
               标签文字 
              
            </span>
            <!---->
          </span>
        </div>
        <div
          class="summary"
        >
          超长文本省略标签
        </div>
        <div
          class="tag-demo"
        >
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
            role="button"
            style="max-width: 130px;"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              听说超长可以省略听说超长
              
            </span>
            <!---->
          </span>
        </div>
      </div>
      <div>
        <div
          class="summary"
        >
          可关闭标签
        </div>
        <div
          class="tag-demo"
        >
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium t-tag--closable"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              文字标签
              
            </span>
            <span
              class="t-tag__icon-close"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="close"
                >
                  <path
                    d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            aria-disabled="false"
            class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium t-tag--closable"
            role="button"
          >
            <!---->
            <span
              class="t-tag__text"
            >
              
              文字标签
              
            </span>
            <span
              class="t-tag__icon-close"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="close"
                >
                  <path
                    d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div>
        <div
          class="summary"
        >
          可选中的标签
        </div>
        <div
          class="tag-demo"
        >
          <div>
            
            <div
              class="tag-block check-tag-block"
            >
              <div
                class="check-tag-block__title"
              >
                light
              </div>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--light"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  未选中态
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--light t-tag--checked"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  已选中态
                </span>
                <!---->
              </span>
            </div>
            <div
              class="tag-block check-tag-block"
            >
              <div
                class="check-tag-block__title"
              >
                dark
              </div>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--dark"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  未选中态
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--dark t-tag--checked"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  已选中态
                </span>
                <!---->
              </span>
            </div>
            <div
              class="tag-block check-tag-block"
            >
              <div
                class="check-tag-block__title"
              >
                outline
              </div>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--outline"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  未选中态
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--outline t-tag--checked"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  已选中态
                </span>
                <!---->
              </span>
            </div>
            <div
              class="tag-block check-tag-block"
            >
              <div
                class="check-tag-block__title"
              >
                light-outline
              </div>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--default t-tag--large t-tag--light-outline"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  未选中态
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--checkable t-tag--square t-tag--primary t-tag--large t-tag--light-outline t-tag--checked"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  已选中态
                </span>
                <!---->
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          展示型标签
        </div>
        <div
          class="tag-demo"
        >
          <div>
            <div
              class="tag-block"
            >
              <span
                aria-disabled="false"
                class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  默认
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--primary t-tag--square t-tag--light t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  主要
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--warning t-tag--square t-tag--light t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  警告
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--danger t-tag--square t-tag--light t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  危险
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--success t-tag--square t-tag--light t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  成功
                  
                </span>
                <!---->
              </span>
            </div>
            <div
              class="tag-block"
            >
              <span
                aria-disabled="false"
                class="t-tag t-tag--default t-tag--square t-tag--dark t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  默认
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--primary t-tag--square t-tag--dark t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  主要
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--warning t-tag--square t-tag--dark t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  警告
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--danger t-tag--square t-tag--dark t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  危险
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--success t-tag--square t-tag--dark t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  成功
                  
                </span>
                <!---->
              </span>
            </div>
            <div
              class="tag-block"
            >
              <span
                aria-disabled="false"
                class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  默认
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--primary t-tag--square t-tag--outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  主要
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--warning t-tag--square t-tag--outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  警告
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--danger t-tag--square t-tag--outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  危险
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--success t-tag--square t-tag--outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  成功
                  
                </span>
                <!---->
              </span>
            </div>
            <div
              class="tag-block"
            >
              <span
                aria-disabled="false"
                class="t-tag t-tag--default t-tag--square t-tag--light-outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  默认
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--primary t-tag--square t-tag--light-outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  主要
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--warning t-tag--square t-tag--light-outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  警告
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--danger t-tag--square t-tag--light-outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  危险
                  
                </span>
                <!---->
              </span>
              <span
                aria-disabled="false"
                class="t-tag t-tag--success t-tag--square t-tag--light-outline t-tag--medium"
                role="button"
              >
                <!---->
                <span
                  class="t-tag__text"
                >
                  
                  成功
                  
                </span>
                <!---->
              </span>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件尺寸
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="group padding-bottom d-flex"
      >
        <div
          class="tag-container"
          data-v-23f4c177=""
        >
          <div
            class="tag-block"
            data-v-23f4c177=""
          >
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--extra-large"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                加大尺寸
                
              </span>
              <!---->
            </span>
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--large"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                大尺寸
                
              </span>
              <!---->
            </span>
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                中尺寸
                
              </span>
              <!---->
            </span>
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--small"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                小尺寸
                
              </span>
              <!---->
            </span>
          </div>
          <div
            class="tag-block tag-block1"
            data-v-23f4c177=""
          >
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--extra-large t-tag--closable"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                加大尺寸
                
              </span>
              <span
                class="t-tag__icon-close"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="close"
                  >
                    <path
                      d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--large t-tag--closable"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                大尺寸
                
              </span>
              <span
                class="t-tag__icon-close"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="close"
                  >
                    <path
                      d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium t-tag--closable"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                中尺寸
                
              </span>
              <span
                class="t-tag__icon-close"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="close"
                  >
                    <path
                      d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              class="t-tag t-tag--default t-tag--square t-tag--light t-tag--small t-tag--closable"
              data-v-23f4c177=""
              role="button"
            >
              <!---->
              <span
                class="t-tag__text"
              >
                
                小尺寸
                
              </span>
              <span
                class="t-tag__icon-close"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="close"
                  >
                    <path
                      d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tag > Tag sizeVue demo works fine 1`] = `
<div
  class="tag-container"
  data-v-23f4c177=""
>
  <div
    class="tag-block"
    data-v-23f4c177=""
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--extra-large"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        加大尺寸
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--large"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        大尺寸
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        中尺寸
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--small"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        小尺寸
        
      </span>
      <!---->
    </span>
  </div>
  <div
    class="tag-block tag-block1"
    data-v-23f4c177=""
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--extra-large t-tag--closable"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        加大尺寸
        
      </span>
      <span
        class="t-tag__icon-close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--large t-tag--closable"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        大尺寸
        
      </span>
      <span
        class="t-tag__icon-close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium t-tag--closable"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        中尺寸
        
      </span>
      <span
        class="t-tag__icon-close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--small t-tag--closable"
      data-v-23f4c177=""
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        小尺寸
        
      </span>
      <span
        class="t-tag__icon-close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Tag > Tag themeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    展示型标签
  </div>
  <div
    class="tag-demo"
  >
    <div>
      <div
        class="tag-block"
      >
        <span
          aria-disabled="false"
          class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            默认
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--primary t-tag--square t-tag--light t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            主要
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--warning t-tag--square t-tag--light t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            警告
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--danger t-tag--square t-tag--light t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            危险
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--success t-tag--square t-tag--light t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            成功
            
          </span>
          <!---->
        </span>
      </div>
      <div
        class="tag-block"
      >
        <span
          aria-disabled="false"
          class="t-tag t-tag--default t-tag--square t-tag--dark t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            默认
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--primary t-tag--square t-tag--dark t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            主要
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--warning t-tag--square t-tag--dark t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            警告
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--danger t-tag--square t-tag--dark t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            危险
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--success t-tag--square t-tag--dark t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            成功
            
          </span>
          <!---->
        </span>
      </div>
      <div
        class="tag-block"
      >
        <span
          aria-disabled="false"
          class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            默认
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--primary t-tag--square t-tag--outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            主要
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--warning t-tag--square t-tag--outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            警告
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--danger t-tag--square t-tag--outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            危险
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--success t-tag--square t-tag--outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            成功
            
          </span>
          <!---->
        </span>
      </div>
      <div
        class="tag-block"
      >
        <span
          aria-disabled="false"
          class="t-tag t-tag--default t-tag--square t-tag--light-outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            默认
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--primary t-tag--square t-tag--light-outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            主要
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--warning t-tag--square t-tag--light-outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            警告
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--danger t-tag--square t-tag--light-outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            危险
            
          </span>
          <!---->
        </span>
        <span
          aria-disabled="false"
          class="t-tag t-tag--success t-tag--square t-tag--light-outline t-tag--medium"
          role="button"
        >
          <!---->
          <span
            class="t-tag__text"
          >
            
            成功
            
          </span>
          <!---->
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag > Tag typeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    基础标签
  </div>
  <div
    class="tag-demo"
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        标签文字 
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        标签文字
        
      </span>
      <!---->
    </span>
  </div>
  <div
    class="summary"
  >
    圆弧标签
  </div>
  <div
    class="tag-demo"
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--round t-tag--light t-tag--medium"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        标签文字
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--round t-tag--outline t-tag--medium"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        标签文字
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--mark t-tag--outline t-tag--medium"
      role="button"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        标签文字
        
      </span>
      <!---->
    </span>
  </div>
  <div
    class="summary"
  >
    带图标的标签
  </div>
  <div
    class="tag-demo"
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
      role="button"
    >
      <span
        class="t-tag__icon"
      >
        
        <svg
          class="t-icon t-icon-discount"
        >
          <use
            href="#t-icon-discount"
          />
        </svg>
        
      </span>
      <span
        class="t-tag__text"
      >
        
         标签文字 
        
      </span>
      <!---->
    </span>
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--outline t-tag--medium"
      role="button"
    >
      <span
        class="t-tag__icon"
      >
        
        <svg
          class="t-icon t-icon-discount"
        >
          <use
            href="#t-icon-discount"
          />
        </svg>
        
      </span>
      <span
        class="t-tag__text"
      >
        
         标签文字 
        
      </span>
      <!---->
    </span>
  </div>
  <div
    class="summary"
  >
    超长文本省略标签
  </div>
  <div
    class="tag-demo"
  >
    <span
      aria-disabled="false"
      class="t-tag t-tag--default t-tag--square t-tag--light t-tag--medium"
      role="button"
      style="max-width: 130px;"
    >
      <!---->
      <span
        class="t-tag__text"
      >
        
        听说超长可以省略听说超长
        
      </span>
      <!---->
    </span>
  </div>
</div>
`;
